Wed Apr  9 21:21:58 UTC 2008 mdpetch <mpetch@capp-sysware.com> 
	* gnubg.c, sound.c: Changed to Apple Quicktime for sound under OS/X rather than ESD
	  This change may be revisted if it is decided to use another sound subsystem	
	* multithread.c, configure.in: modified to support multithreaded version on non Intel system (Apple PPC etc) 

Sun Apr  6 22:33:51 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* lib/neuralnet.c: fix minor apple compile problem.

Sun Apr  6 22:33:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* INSTALL: update .

Mon Mar 31 12:58:06 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, gnubgmodule.c: include stdint.h on win32

Fri Mar 28 15:25:34 CET 2008 Achim Mueller <ace@gnubg.org>

	* changed configure.in: new release number 0.9.0 

Fri Mar 28 00:40:32 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkrelational.c: rearrange player details and stats view

Thu Mar 27 22:37:01 CET 2008 Christian Anthon <anthon@kiku.dk>

	* po/gnubg.pot, non-src/credits.c, po/it.po: update italian
	translation

Tue Mar 25 14:30:42 CET 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c: fix a compiler warning when without python and sqlite

Tue Mar 18 23:47:53 CET 2008 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, gnubg.c, makebearoff.c, makehyper.c: minor compile
	problems without threads

Tue Mar 18 02:25:32 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c, formatgs.c: edit the texts in the game analysis

Tue Mar 18 01:54:21 CET 2008 Christian Anthon <anthon@kiku.dk>

	* po/*.po, po/gnubg.pot: update the translation files

Mon Mar 17 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* credits.sh/c: Update copyright to 2008.

Sun Mar 16 22:01:07 CET 2008 Christian Anthon <anthon@kiku.dk>

	* set.c, gtkgame.c: fix minor problems with the hide/show ids

Sun Mar 16 21:56:59 CET 2008 Christian Anthon <anthon@kiku.dk>

	* credits.sh, gnubg.c, non-src/credits.c, non-src/external_l.c,