@@ -22,7 +22,6 @@ AC_REVISION($Revision$)
 AC_INIT([GNU Backgammon],[0.9.0],[bug-gnubg@gnu.org],[gnubg])
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
-AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR(gnubg.c)
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
@@ -31,16 +30,14 @@ dnl
 dnl parse default options
 dnl
 
-if test -f config.options
-then
+if test -f config.options; then
   . ./config.options
 fi
 
 dnl
 dnl host specifics
-dnl 
+dnl
 
-intelx86=no
 win32=no
 
 AC_MSG_CHECKING([for host])
@@ -48,9 +45,7 @@ case "$host" in
   *-*-mingw*)
     win32=yes
     CFLAGS="$CFLAGS -mms-bitfields"
-    ;;
-  *i*86*-*-* | *x86*-*-*)
-    intelx86=yes
+    LDFLAGS="$LDFLAGS -lwinmm"
     ;;
 esac
 AC_MSG_RESULT([$host])
@@ -61,7 +56,7 @@ dnl
 
 AC_GNU_SOURCE
 AC_PROG_CC
-AM_CONDITIONAL(CROSS_COMPILING, test "$cross_compiling" = "yes")
+AM_CONDITIONAL(CROSS_COMPILING, test "x$cross_compiling" = "xyes")
 
 
 dnl
@@ -177,7 +172,7 @@ dnl
 dnl Checks for declarations
 dnl
 
-AC_CHECK_DECLS(signbit,, AC_DEFINE([signbit(x)], [((x) < 0.0)], [define signbit]), [#include <math.h>]) 
+AC_CHECK_DECLS(signbit,, AC_DEFINE([signbit(x)], [((x) < 0.0)], [define signbit]), [#include <math.h>])
 AC_CHECK_DECLS(lrint,, AC_DEFINE([lrint(x)], [((long) ((x)+0.5))], [define lrint]), [#include <math.h>])
 AC_CHECK_DECLS(acosf,, AC_DEFINE(acosf, acos, [set acosf to acos if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(asinf,, AC_DEFINE(asinf, asin, [set asinf to asin if undefined]), [#include <math.h>])
@@ -225,18 +220,6 @@ if test "x$az_python_cspec" != "x"; then
 fi
 
 dnl
-dnl windows Sounds
-dnl
-
-if test "$win32" != "no"; then
-    WINMMSND_LIBS="-lwinmm"
-    WINMMSND_CFLAGS=
-fi
-AM_CONDITIONAL(HAVE_WINMMSND, test "$win32" != "no" )
-AC_SUBST(WINMMSND_LIBS)
-AC_SUBST(WINMMSND_CFLAGS)
-
-dnl
 dnl SSE
 dnl
 
@@ -253,14 +236,6 @@ if test "$ssecpu" != "no"; then
 fi
 
 AC_SUBST(SSE_CFLAGS)
-
-dnl
-dnl x86 prcoessor check
-dnl
-
-if test "$intelx86" != "no"; then
-	AC_DEFINE(HAVE_INTELX86_PROCESSOR,1, Defined if using an intel x86 processor)
-fi
 
 dnl
 dnl Threads
